# motus.leap

./: .gitignore  .mcp.json  AGENTS.md  CLAUDE.md  CSP_STRICTNESS_PLAN.md  DEPLOYMENT_SUMMARY.md  DEPLOY_TRIGGER  Dockerfile  FIXES-APPLIED.md  PERFORMANCE_OPTIMIZATION_REPORT.md  PHASE2_3_DEPLOYMENT_SUMMARY.md  PLAN.md  README.md  REPORT.md  TODO.md  __init__.py  ai_classifier.py  analyze_playlists.py  app.py  app_old.py  apply_maintenance.py  auth_setup.py  categorize_playlists.py  check_db_temp.py  check_starwars.py  cleanup_playlists.py  cli.py  config.example.yaml  config.json  core.py  db_helper.py  debug_playlist.html  debug_summary.md  dialog_structure.html  find_videos.py  fix_button_layout.py  fix_buttons.py  fix_csp.py  fix_html_csp.py  fix_js_syntax.py  (+20 more)
.pandaos/: .team-managed.json  config.yaml
api/: auth.py  bulk_operations.py  bulk_operations_impl.py
camofox-browser/: server.js
core/: __init__.py  actions.py  config_manager.py  http_client.py  logger.py  lru_cache.py  task_manager.py
docs/: NEO_DELEGATION_LOG.md  README.md  deployment.md  obsidian-link.md  requirements.txt  runbook.md
frontend/: banner-no-graphic.html  banner-with-graphic.html  banner.html  seamless-banner.html
models/: config.py  scheduled_job.py
reports/: MOBILE_API_REVIEW.md  MOBILE_UX_REPORT.md  UA-REPORT.md  UX_CONSOLIDATED_REPORT.md
routers/: playlists.py
scratch/: analyze_skipped.py  apply_maintenance_playwright.py  check_api.py  check_api_videos.py  check_continuation.py  check_login_selenium.py  check_login_state.py  check_mappings.py  check_page_source.py  check_playlist_metadata.py  check_status.py  (+75 more)
(+207 files in other folders)
