[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.backends.legacy:build"

[project]
name = "tube-manager"
version = "0.1.0"
requires-python = ">=3.11"
dependencies = ["pyyaml", "click", "fastapi", "uvicorn[standard]"]

[project.optional-dependencies]
dev = ["pytest", "httpx"]

[project.scripts]
tube = "tube_manager.cli:cli"

[tool.setuptools]
packages = ["tube_manager"]

[tool.setuptools.package-data]
"*" = ["py.typed"]

[tool.pytest.ini_options]
testpaths = ["tests"]
