[project]
name = "tube-manager"
version = "0.2.0"
requires-python = ">=3.11"
dependencies = ["pyyaml", "click", "fastapi", "uvicorn[standard]", "pydantic"]

[project.optional-dependencies]
dev = ["pytest", "httpx"]

[project.scripts]
tube = "tube_manager.cli:cli"

[tool.pytest.ini_options]
testpaths = ["tests"]

[tool.setuptools.packages.find]
include = ["tube_manager*"]
exclude = ["web*"]
